snapshot_tests/operations/errors/missingFragment.re
module Fragment = [%graphql
  {|
  fragment ListFragment on UnknownFragment {
    nullableOfNullable
    nullableOfNonNullable
  }
|}
];
